# openclaw-mac-agent

./: Cargo.toml  README-mac.md  README.md  controller_update_v2_payload.py  start-mac.sh  start.sh
.github/workflows/: build.yml
config/: mac-profile.json
src/: client.rs  config.rs  executor.rs  main.rs  protocol.rs  security.rs
