[package]
name = "openclaw-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", default-features = false, features = ["macros", "rt", "time", "io-util", "process", "sync", "net"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false
overflow-checks = false
debug-assertions = false
split-debuginfo = "off"
